# geo

./: README.rst  pyproject.toml
geo/: almi.py  anvar.py  arazmarket.py  atbmarket.py  avokado.py  bazarstore.py  bravosupermarket.py  dobroсen.py  eko.py  ermolino_produkty.py  evroopt.py  kirmarket.py  kolizey.py  kolomarket.py  krasyar.py  kupetz.py  magnum.py  malinka_nn.py  maria_ra.py  mgnl.py  monetka.py  neptun.py  oba.py  rublevskiy.py  rukavychka.py  silpo.py  sm_komandor.py  small.py  sosedi.py  svetofor_all_country.py  svetofor_nsk.py
sgeocoder/: aio_pw.py  aio_pw_kupetz.py
