[tool.poetry]
name = "geo"
version = "0.1.0"
description = ""
authors = ["T23 <petr777@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
Scrapy = "^2.5.1"
html-text = "^0.5.2"
Faker = "^11.3.0"
aiohttp = "^3.8.1"
dadata = "^21.10.1"
playwright = "^1.17.2"
natasha = "^1.4.0"
geocoder = "^1.38.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
